--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,28 @@ a {
   font-size: 1.2rem;
 }
 
+/* Testimonials */
+
+#testimonials {
+  background-color: #fff;
+}
+
+.testimonial-img {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.testimonial-text {
+  font-size: 2rem;
+  font-weight: 900;
+  line-height: 1.5;
+}
+
+.resume-download {
+  padding: 5% 15%;
+}
+
 
 /* Gallery Page */
 
